# proto-test

./: .gitignore  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  package-lock.json  package.json  pyproject.toml
.githooks/: pre-commit  pre-push
js/: package.json  protos.js  test.js  test_pb.js
pb-2/: buf.gen.yaml  package-lock.json  pyproject.toml
pb-2/python_protos/abc/: v1.py
pb-2/python_protos/test/: v1.py
pb-2/sample_protos_go/: go.mod
pb-2/sample_protos_go/abc/v1/: abc.pb.go
pb-2/src/abc/v1/: abc.proto
protocol-buffers/: README.md  buf.gen.yaml  buf.yaml  package.json  pyproject.toml
protocol-buffers/python_protos/abc/v1/: abc_pb2.py  abc_pb2.pyi
protocol-buffers/python_protos/test/v1/: test_pb2.pyi
protocol-buffers/python_protos/xyz/: v1.py
protocol-buffers/python_protos/xyz/v1/: xyz_pb2.py  xyz_pb2.pyi
protocol-buffers/src/test/v1/: test.proto
protocol-buffers/src/test/v2/: test.proto
protocol-buffers/src/xyz/v1/: xyz.proto
python/common/v1/: abc_pb2.py
python/test/v1/: test_pb2.py
python_protos/abc/v1/: abc_pb2.py
python_protos/test/: v2.py
python_protos/test/v2/: test_pb2.py
sample_python/: abc_pb2.py
scripts/: js-proto-generator.sh
src/: test.proto
src/abc/v1/: abc.proto
src/common/v1/: abc.proto
src/test/v1/: test.proto
